--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -3,28 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <haiphat.com.bds.nghetuvan.utils.RippleView
-        android:id="@+id/rippleItem"
-        style="@style/wrapContent"
-        android:padding="5dp">
-        <ImageView
-            android:id="@+id/imgCategory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_defaul_bg_my_course"/>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleItem"
+            style="@style/wrapContent"
+            android:padding="5dp">
+
+            <ImageView
+                android:id="@+id/imgCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_defaul_bg_my_course" />
+
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
 
         <TextView
             android:id="@+id/tvName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:text="Tin tức chung"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imgCategory" />
-    </haiphat.com.bds.nghetuvan.utils.RippleView>
+            app:layout_constraintTop_toBottomOf="@+id/rippleItem" />
+    </android.support.constraint.ConstraintLayout>
 </layout>
