--- a/app/src/main/res/layout/fragment_document.xml
+++ b/app/src/main/res/layout/fragment_document.xml
@@ -4,9 +4,31 @@
 
     <android.support.constraint.ConstraintLayout style="@style/matchParent">
 
-        <TextView
+        <ProgressBar
+            android:id="@+id/pbLoadMore"
             style="@style/wrapContent"
-            android:text="Tài liệu"
+            android:theme="@style/AppTheme.WhiteAccent"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            style="@style/matchWrap"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/pbLoadMore"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvDocument"
+                style="@style/matchParent" />
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <TextView
+            android:id="@+id/tvNoData"
+            style="@style/wrapContent"
+            android:text="Chưa có tài liệu nào"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
