--- a/app/src/main/res/layout/fragment_financial_package.xml
+++ b/app/src/main/res/layout/fragment_financial_package.xml
@@ -4,13 +4,18 @@
 
     <android.support.constraint.ConstraintLayout style="@style/matchParent">
 
-        <TextView
-            style="@style/wrapContent"
-            android:text="Gói tài chính"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            style="@style/matchWrap"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/pbLoadMore"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <WebView
+                android:id="@+id/webFinancialPackage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
