--- a/app/src/main/res/layout/fragment_register_education.xml
+++ b/app/src/main/res/layout/fragment_register_education.xml
@@ -70,6 +70,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvWhoAreYou"
                 style="@style/widthMatch"
+                android:nestedScrollingEnabled="false"
                 android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="@+id/tvWhoAreYou"
                 app:layout_constraintStart_toStartOf="@+id/tvWhoAreYou"
