--- a/app/src/main/res/layout/fragment_online_sales.xml
+++ b/app/src/main/res/layout/fragment_online_sales.xml
@@ -1,12 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.evrencoskun.tableview.TableView
-        android:id="@+id/content_container"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp">
 
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleProject"
+            style="@style/withWrap"
+            android:layout_marginRight="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/rippleBuilding"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/rippleBuilding"
+            app:layout_constraintTop_toTopOf="@+id/rippleBuilding">
+
+            <TextView
+                android:id="@+id/edNameProject"
+                style="@style/withWrap"
+                android:gravity="center"
+                android:hint="Tên dự án"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                style="@style/wrapContent"
+                android:src="@drawable/ic_dow"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
+
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleBuilding"
+            style="@style/withWrap"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/rippleSearch"
+            app:layout_constraintEnd_toStartOf="@+id/rippleSearch"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintLeft_toRightOf="@+id/rippleProject"
+            app:layout_constraintTop_toTopOf="@+id/rippleSearch">
+
+            <TextView
+                android:id="@+id/edType"
+                style="@style/withWrap"
+                android:gravity="center"
+                android:text="Tòa nhà"
+                app:layout_constraintEnd_toStartOf="@+id/imageView3"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                style="@style/wrapContent"
+                android:src="@drawable/ic_dow"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
+
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleSearch"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_search_action_bar"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <com.evrencoskun.tableview.TableView
+            android:id="@+id/content_container"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rippleProject" />
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
