--- a/app/src/main/res/layout/fragment_online_sales.xml
+++ b/app/src/main/res/layout/fragment_online_sales.xml
@@ -19,7 +19,7 @@
             app:layout_constraintTop_toTopOf="@+id/rippleBuilding">
 
             <TextView
-                android:id="@+id/edNameProject"
+                android:id="@+id/tvProject"
                 style="@style/withWrap"
                 android:gravity="center"
                 android:hint="Tên dự án"
@@ -40,7 +40,7 @@
         <haiphat.com.bds.nghetuvan.utils.RippleView
             android:id="@+id/rippleBuilding"
             style="@style/withWrap"
-            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginLeft="5dp"
             app:layout_constraintBottom_toBottomOf="@+id/rippleSearch"
             app:layout_constraintEnd_toStartOf="@+id/rippleSearch"
@@ -49,7 +49,7 @@
             app:layout_constraintTop_toTopOf="@+id/rippleSearch">
 
             <TextView
-                android:id="@+id/edType"
+                android:id="@+id/tvBuilding"
                 style="@style/withWrap"
                 android:gravity="center"
                 android:text="Tòa nhà"
