--- a/app/src/main/res/layout/fragment_online_sales.xml
+++ b/app/src/main/res/layout/fragment_online_sales.xml
@@ -40,8 +40,8 @@
         <haiphat.com.bds.nghetuvan.utils.RippleView
             android:id="@+id/rippleBuilding"
             style="@style/withWrap"
-            android:layout_marginRight="8dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/rippleSearch"
             app:layout_constraintEnd_toStartOf="@+id/rippleSearch"
             app:layout_constraintHorizontal_weight="1"
@@ -72,15 +72,59 @@
             android:background="@drawable/ic_search_action_bar"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <com.evrencoskun.tableview.TableView
-            android:id="@+id/content_container"
+        <!--<com.evrencoskun.tableview.TableView-->
+        <!--android:id="@+id/content_container"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/rippleProject" />-->
+
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rippleProject" />
+            app:layout_constraintTop_toBottomOf="@+id/rippleProject">
+
+                <TableLayout
+                    android:id="@+id/table_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            <ScrollView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/fillable_area"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <TableLayout
+                        android:id="@+id/fixed_column"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <HorizontalScrollView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content">
+
+                        <TableLayout
+                            android:id="@+id/scrollable_part"
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent" />
+                    </HorizontalScrollView>
+                </LinearLayout>
+            </ScrollView>
+        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
