--- a/app/src/main/res/layout/activity_detail_online_sales.xml
+++ b/app/src/main/res/layout/activity_detail_online_sales.xml
@@ -102,7 +102,7 @@
                 style="@style/matchWrap"
                 android:background="@color/colorAccent"
                 app:tabIndicatorColor="@color/colorWhite"
-                app:tabMode="scrollable"
+                app:tabMode="fixed"
                 app:tabTextAppearance="@style/DetailPressReleaseTabText" />
         </android.support.design.widget.AppBarLayout>
 
